--- a/index.html
+++ b/index.html
@@ -1,40 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-    <link rel="stylesheet" href="style.css">
-    <title>Restaurace Pilská Hospoda</title>
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+        <link rel="stylesheet" href="style.css">
+        <title>Restaurace Pilská Hospoda</title>
+    </head>
 
-<body>
-    <div class="w3-container w3-center" id="logo">
-        <img src="logo.png" class="w3-mobile" alt="" height="150px">
-    </div>
-    <div class="w3-container w3-cell-row w3-center w3-red" id="menu">
-        <a href="./index.html" class="w3-cell w3-button w3-mobile active">Domů</a>
-        <a href="./jidelni_listek.html" class="w3-cell w3-button w3-mobile w3-hover-white">Jídelní lístek</a>
-        <a href="./napojovy_listek.html" class="w3-cell w3-button w3-mobile w3-hover-white">Nápojový lístek</a>
-        <a href="./kontakt.html" class="w3-cell w3-button w3-mobile w3-hover-white">Kontakt</a>
-    </div>
+    <body>
+        <div class="w3-container w3-center" id="logo">
+            <img src="logo.png" class="w3-mobile" alt="" height="150px">
+        </div>
+        <div class="w3-container w3-cell-row w3-center w3-red" id="menu">
+            <a href="./index.html" class="w3-cell w3-button w3-mobile active">Domů</a>
+            <a href="./jidelni_listek.html" class="w3-cell w3-button w3-mobile
+                w3-hover-white">Jídelní lístek</a>
+            <a href="./napojovy_listek.html" class="w3-cell w3-button w3-mobile
+                w3-hover-white">Nápojový lístek</a>
+            <a href="./kontakt.html" class="w3-cell w3-button w3-mobile
+                w3-hover-white">Kontakt</a>
+        </div>
 
-    <div class="w3-container w3-row w3-center" id="content">
-        <div class="w3-left w3-mobile" id="content" style="width:50%">
-            <h3>O nás</h3>
-            <p>Obecní pohostinské zařízení se společenským sálem (kapacita cca 150 osob) nabízí v celoročním provozu své služby jak výletníkům, tak stálým hostům či organizovaným skupinám.</p>
-            <p>Samozřejmostí je posezení v letní zahrádce a po domluvě možnost pořádání akcí jako grilování apod. Sál může poskytnout zázemí pro společenské a kulturní akce (taneční zábavy, koncerty, divadelní představení, rodinné oslavy) i např. pro pracovní
-                setkání (vybavení pro velkoplošnou projekci.</p>
-            <p>Nově byly na objektu rekonstruovány střechy a fasády. Přibyla zastřešená venkovní terasa, opravami prošly související stavby. Na začátku léta 2019 proběhly renovační práce na veškerých interiérech včetně kuchyňského zázemí.</p>
+        <div class="w3-container w3-row w3-center" id="content">
+            <div class="w3-left w3-mobile" id="content" style="width:50%">
+                <h3>O nás</h3>
+                <p>Obecní pohostinské zařízení se společenským sálem (kapacita
+                    cca 150 osob) nabízí v celoročním provozu své služby jak
+                    výletníkům, tak stálým hostům či organizovaným skupinám.</p>
+                <p>Samozřejmostí je posezení v letní zahrádce a po domluvě
+                    možnost pořádání akcí jako grilování apod. Sál může
+                    poskytnout zázemí pro společenské a kulturní akce (taneční
+                    zábavy, koncerty, divadelní představení, rodinné oslavy) i
+                    např. pro pracovní
+                    setkání (vybavení pro velkoplošnou projekci.</p>
+                <p>Nově byly na objektu rekonstruovány střechy a fasády. Přibyla
+                    zastřešená venkovní terasa, opravami prošly související
+                    stavby. Na začátku léta 2019 proběhly renovační práce na
+                    veškerých interiérech včetně kuchyňského zázemí.</p>
+            </div>
+            <div class="w3-right w3-mobile" id="iframe" style="width:50%;
+                padding:2vh">
+                <h3>Aktuality</h3>
+                <iframe class="w3-mobile" id="facebook"
+                    src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2Fcategory%2FEvent%2FRestaurace-Pilsk%25C3%25A1-hospoda-3035592926465880%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId"
+                    style="border:none;overflow:hidden; width: 23em; height:
+                    35em" scrolling="no" frameborder="0"
+                    allowTransparency="true" allow="encrypted-media"></iframe>
+            </div>
         </div>
-        <div class="w3-right w3-mobile" id="iframe" style="width:50%; padding:2vh">
-            <h3>Aktuality</h3>
-            <iframe class="w3-mobile" id="facebook" src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fpages%2Fcategory%2FEvent%2FRestaurace-Pilsk%25C3%25A1-hospoda-3035592926465880%2F&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=false&appId"
-                style="border:none;overflow:hidden; width: 23em; height: 35em" scrolling="no" frameborder="0" allowTransparency="true" allow="encrypted-media"></iframe>
-        </div>
-    </div>
-</body>
+    </body>
 
 </html>
